Add macros to experiment with turning on and off const, assume and noexcept

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,32 @@ set(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_CXX_STANDARD 11)
 
+option(DISABLE_CONST_FUNC "Disable const keyword on member functions" OFF)
+option(DISABLE_CONST_VAR "Disable const keyword on member variables" OFF)
+option(DISABLE_NOEXCEPT "Disable noexcept keyword" OFF)
+option(DISABLE_OVERRIDE "Disable override keyword" OFF)
+option(DISABLE_FINAL "Disable final keyword" OFF)
+option(DISABLE_ASSUME "Disable assume keyword" OFF)
+
+
+if(DISABLE_CONST_FUNC)
+    add_compile_definitions(DISABLE_CONST_FUNC)
+endif()
+if(DISABLE_CONST_VAR)
+    add_compile_definitions(DISABLE_CONST_VAR)
+endif()
+if(DISABLE_NOEXCEPT)
+    add_compile_definitions(DISABLE_NOEXCEPT)
+endif()
+if(DISABLE_OVERRIDE)
+    add_compile_definitions(DISABLE_OVERRIDE)
+endif()
+if(DISABLE_FINAL)
+    add_compile_definitions(DISABLE_FINAL)
+endif()
+if(DISABLE_ASSUME)
+    add_compile_definitions(DISABLE_ASSUME)
+endif()
+
 include_directories(include)
 add_executable(inOneWeekend src/main.cxx)
