Separate out CONST_VAR to CONST_VAR and CONST_INPUT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 11)
 
 option(DISABLE_CONST_FUNC "Disable const keyword on member functions" OFF)
+option(DISABLE_CONST_INPUT "Disable const keyword on input parameters" OFF)
 option(DISABLE_CONST_VAR "Disable const keyword on member variables" OFF)
 option(DISABLE_NOEXCEPT "Disable noexcept keyword" OFF)
 option(DISABLE_OVERRIDE "Disable override keyword" OFF)
@@ -21,6 +22,9 @@ if(DISABLE_CONST_FUNC)
 endif()
 if(DISABLE_CONST_VAR)
     add_compile_definitions(DISABLE_CONST_VAR)
+endif()
+if(DISABLE_CONST_INPUT)
+    add_compile_definitions(DISABLE_CONST_INPUT)
 endif()
 if(DISABLE_NOEXCEPT)
     add_compile_definitions(DISABLE_NOEXCEPT)
