--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,10 @@ set(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_CXX_STANDARD 14)
 
-option(DISABLE_CONST_FUNC "Disable const keyword on member functions" OFF)
-option(DISABLE_CONST_INPUT "Disable const keyword on input parameters" OFF)
 option(DISABLE_CONST_VAR "Disable const keyword on member variables" OFF)
-option(DISABLE_NOEXCEPT "Disable noexcept keyword" OFF)
-option(DISABLE_OVERRIDE "Disable override keyword" OFF)
-option(DISABLE_FINAL "Disable final keyword" OFF)
+#option(DISABLE_NOEXCEPT "Disable noexcept keyword" OFF)
+#option(DISABLE_OVERRIDE "Disable override keyword" OFF)
+#option(DISABLE_FINAL "Disable final keyword" OFF)
 option(DISABLE_ASSUME "Disable assume keyword" OFF)
 option(DISABLE_POW "Disable pow function (replace with unrolled calculation)" OFF)
 option(DISABLE_CONSTEXPR "Disable constexpr keyword" OFF)
