Build all combinations of cmake bool options

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,8 @@ jobs:
 
     - name: Build
       run: cmake --build build
+    
+    - name: Run all build configurations
+      run: |
+        cd tests
+        ./test_all_builds.sh
